--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 70: MY HOUSE - Beyonce
+          Week 71: FTCU - Nicki Minaj
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 9.2/10</h2>
+            <h2 id="rating">Overall Rating 8.8/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/7omJfT9s6V2IpQNBYyq5C8?si=03ae8616e39c44c4"
+                    href="https://open.spotify.com/track/1a73gcEg6h6Re6hHXoVltJ?si=8e1c0e45b82145b9"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=jt8SFRxKNk0"
+                    href="https://www.youtube.com/watch?v=zE53Otfrr0k"
                     target="_blank"
                     ><center>
                       <img
@@ -141,24 +141,26 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              What's not to love here? I have to give it to the sample on this
-              one though if I have to choose my favorite part. This song is
-              driven by this powerful sample, I love it when a step team or
-              cheerleading routine is sampled in a song. Beyonce's live album
-              "Homecoming" has a lot of this school-spirit-driven production as
-              well, she's no rookie at producing these kinds of songs.
+              The hook in this song is just alright in my opinion, a chopped up
+              Wocka Flocka Flame sample is not my idea of a killer chorus. But
+              after the second chorus in the middle of the song, the beat cuts.
+              . . . and we bring it back in on the second line of Nicki's second
+              verse! It makes you forget all about the obscenities Wacka Flocka
+              was just spitting.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Beyonce!!??!! Beyonce dropped this single out of nowhere on
-              Thursday and I'm still recovering from that shockwave. Although I
-              loved Beyonce's diversion from her iconic sound with her latest
-              record "RENAISSANCE", we are SO back with this new single. It
-              holds on to the greatest disco/house aspects of her "RENAISSANCE"
-              sound, while being reminiscent of "Homecoming" with the dominant
-              step team sample that flows so beautifully with Beyonce's vocals.
-              Enjoy this one, it's a real treat. Oh and also. . . Make it a
-              great week!!
+              Pink Friday 2. Just this Friday, Nicki Minaj returned from a 5
+              year hiatus with a sequel to one of the most influential hip-hop
+              albums of my generation. This new Pink Friday has a long tracklist
+              of rather varied styles, most of which Nicki Minaj has dabbled in
+              before. The heavy sampling throughout this record is nothing new
+              to Nicki Minaj's sound, but has become extremely popularized since
+              her last release. It is so refreshing to finally see it done RIGHT
+              by the Queen herself. I can't say that this track is neccessarily
+              a crowd pleaser, but it has everything I want from a Nicki Minaj
+              track: insane lyricism, choped up old hip-hop samples, and
+              overwhelming, distorted bass. Make it a great week everyone.
             </p>
           </div>
         </div>
@@ -192,18 +194,18 @@
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Drew Gibson: Planet Claire - The B-52's
+            Elijah Rheem: LOVE. FEAT. ZACARI - Kendrick Lamar
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating 8.4/10</h2>
+              <h2 id="rating">Overall Rating 8.67/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/5aC0QmgjYGG8QYgAg06nTk?si=b8530b788fd04313"
+                    href="https://open.spotify.com/track/6PGoSes0D9eUDeeAafB2As?si=487c88ca36974ae0"
                     target="_blank"
                     ><center>
                       <img
@@ -217,7 +219,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=uaXtqSmUlxA"
+                    href="https://www.youtube.com/watch?v=3SaVOpgSa6M"
                     target="_blank"
                     ><center>
                       <img
@@ -234,15 +236,15 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            This is the first song on the first album of the B-52’s and I feel
-            like it’s a really fun introduction to a lot of their music. It
-            isn’t as famous as Love Shack or Rock Lobster, but the beat is
-            really fun and the lyrics are so stupid that you can’t help but
-            smile when it is played. Planet Claire is the perfect song when you
-            just need something silly and uplifting to get you through your day.
-            It also really shows off how a lot of The B-52’s music is just
-            stupid silly lyrics put over really good rock and synth beats that
-            make you want to dance.
+            When I was listening to the whole DAMN. album on the car ride home a
+            couple weeks ago this song especially stuck out to me. And ever
+            since I’ve been going back to it and listening. I really enjoy the
+            overall mood of this song. The blend of Kendrick’s jaw dropping
+            lyricism and songwriting blending with Zacari’s soothing voice just
+            scratches my brain in the right way. I love how their voices sound
+            together it just fits perfectly. He does such a good job painting a
+            picture within the audiences head. This is why K.Dot is one of the
+            GOAT’s in my book. It just makes me want to griddy when I hear it.
           </p>
         </div>
         <div class="divider"><center>Songs of the Week Spotify</center></div>
@@ -610,6 +612,11 @@
               <td>69</td>
               <td>Tired - Adele</td>
               <td>9.7/10</td>
+            </tr>
+            <tr>
+              <td>70</td>
+              <td>MY HOUSE - Beyonce</td>
+              <td>9.2/10</td>
             </tr>
           </table>
         </div>
