--- a/songs.html
+++ b/songs.html
@@ -145,7 +145,7 @@
               Wocka Flocka Flame sample is not my idea of a killer chorus. But
               after the second chorus in the middle of the song, the beat cuts.
               . . . and we bring it back in on the second line of Nicki's second
-              verse! It makes you forget all about the obscenities Wacka Flocka
+              verse! It makes you forget all about the obscenities Wocka Flocka
               was just spitting.
             </p>
             <h2>Overall Review</h2>
