--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 71: FTCU - Nicki Minaj
+          Week 72: PIENSO EN TU MIRÁ - ROSALÍA
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.8/10</h2>
+            <h2 id="rating">Overall Rating 9.3/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/1a73gcEg6h6Re6hHXoVltJ?si=8e1c0e45b82145b9"
+                    href="https://open.spotify.com/track/5r8mGKhCDIVWb3AG4hm0l0?si=38d7f27fd0cc4434"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=zE53Otfrr0k"
+                    href="https://www.youtube.com/watch?v=p_4coiRG_BI"
                     target="_blank"
                     ><center>
                       <img
@@ -141,26 +141,24 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The hook in this song is just alright in my opinion, a chopped up
-              Wocka Flocka Flame sample is not my idea of a killer chorus. But
-              after the second chorus in the middle of the song, the beat cuts.
-              . . . and we bring it back in on the second line of Nicki's second
-              verse! It makes you forget all about the obscenities Wocka Flocka
-              was just spitting.
+              This song is beautiful through and through, with nothing standing
+              out over the rest. The hook is extremely captivating to the point
+              of distraction during my astrophysics final earlier this week. I
+              could not get it to stop playing on a loop in my head.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Pink Friday 2. Just this Friday, Nicki Minaj returned from a 5
-              year hiatus with a sequel to one of the most influential hip-hop
-              albums of my generation. This new Pink Friday has a long tracklist
-              of rather varied styles, most of which Nicki Minaj has dabbled in
-              before. The heavy sampling throughout this record is nothing new
-              to Nicki Minaj's sound, but has become extremely popularized since
-              her last release. It is so refreshing to finally see it done RIGHT
-              by the Queen herself. I can't say that this track is neccessarily
-              a crowd pleaser, but it has everything I want from a Nicki Minaj
-              track: insane lyricism, choped up old hip-hop samples, and
-              overwhelming, distorted bass. Make it a great week everyone.
+              It's not often that I listen to entire albums on repeat like I
+              have with ROSALÍA's "El Mal Querer" these last two weeks. I am
+              always captivated by a well-done concept album, but this one also
+              just happens to have bop after bop. Ballads, pop hits, and
+              whatever genre the fourth track would be considered, all
+              masterfully produced within the domain of her flamenco influence.
+              This track is a perfect mix between her pop sound and her lyrical
+              ballads that come later in the album, it's my favorite from this
+              release so definitely give it a listen. If you enjoy it, listen to
+              tracks 1, 4, and 7 to experience the full range of ROSALÍA on this
+              LP. As always, make it a great week!
             </p>
           </div>
         </div>
@@ -617,6 +615,11 @@
               <td>70</td>
               <td>MY HOUSE - Beyonce</td>
               <td>9.2/10</td>
+            </tr>
+            <tr>
+              <td>71</td>
+              <td>FTCU - Nicki Minaj</td>
+              <td>8.8/10</td>
             </tr>
           </table>
         </div>
