--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 72: PIENSO EN TU MIRÁ - ROSALÍA
+          Week 73: Wood Cabin - Saint Etienne
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 9.3/10</h2>
+            <h2 id="rating">Overall Rating 8.6/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/5r8mGKhCDIVWb3AG4hm0l0?si=38d7f27fd0cc4434"
+                    href="https://open.spotify.com/track/2DvjHHtTjwlrMXyFKxPvXr?si=8e7d4d9517834887"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=p_4coiRG_BI"
+                    href="https://www.youtube.com/watch?v=9pBaIK3EIjk"
                     target="_blank"
                     ><center>
                       <img
@@ -141,24 +141,19 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              This song is beautiful through and through, with nothing standing
-              out over the rest. The hook is extremely captivating to the point
-              of distraction during my astrophysics final earlier this week. I
-              could not get it to stop playing on a loop in my head.
+              The live band sounding production of this song is my main
+              attraction to this track. Listen to the beautful fills after the
+              choruses and the fun outro to really get a feel for the fluidity
+              of the simple percussion and chords.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              It's not often that I listen to entire albums on repeat like I
-              have with ROSALÍA's "El Mal Querer" these last two weeks. I am
-              always captivated by a well-done concept album, but this one also
-              just happens to have bop after bop. Ballads, pop hits, and
-              whatever genre the fourth track would be considered, all
-              masterfully produced within the domain of her flamenco influence.
-              This track is a perfect mix between her pop sound and her lyrical
-              ballads that come later in the album, it's my favorite from this
-              release so definitely give it a listen. If you enjoy it, listen to
-              tracks 1, 4, and 7 to experience the full range of ROSALÍA on this
-              LP. As always, make it a great week!
+              Saint Etienne is a newfound love of mine. They have a sizable
+              discography that I have been slowly trudging my way through. Their
+              1998 release "Good Humor" was my first find and continues to be my
+              favorite from what I've heard. This track is simply my current
+              favorite, but most of the songs on this release are of a similar
+              caliber. Give this one a listen, and make it a MERRY week!
             </p>
           </div>
         </div>
@@ -192,18 +187,18 @@
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Elijah Rheem: LOVE. FEAT. ZACARI - Kendrick Lamar
+            Jack Garbe: Spring has Sprung - Skegss
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating 8.67/10</h2>
+              <h2 id="rating">Overall Rating 7.2/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/6PGoSes0D9eUDeeAafB2As?si=487c88ca36974ae0"
+                    href="https://open.spotify.com/track/4MJZSCObbe4cmjdgYufNg1?si=230effa4339347f2"
                     target="_blank"
                     ><center>
                       <img
@@ -217,7 +212,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=3SaVOpgSa6M"
+                    href="https://www.youtube.com/watch?v=4N535Fl93Vg"
                     target="_blank"
                     ><center>
                       <img
@@ -234,15 +229,11 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            When I was listening to the whole DAMN. album on the car ride home a
-            couple weeks ago this song especially stuck out to me. And ever
-            since I’ve been going back to it and listening. I really enjoy the
-            overall mood of this song. The blend of Kendrick’s jaw dropping
-            lyricism and songwriting blending with Zacari’s soothing voice just
-            scratches my brain in the right way. I love how their voices sound
-            together it just fits perfectly. He does such a good job painting a
-            picture within the audiences head. This is why K.Dot is one of the
-            GOAT’s in my book. It just makes me want to griddy when I hear it.
+            I love skegss and you will too! They are a bunch of cool Australian
+            fellas and they make groovy lil tunes. This song radiates good
+            vibrations into the universe and we can just absorb these and feel
+            good. Unfortunately we are entering the depths of winter in the US
+            but surely spring will spring again eventually.
           </p>
         </div>
         <div class="divider"><center>Songs of the Week Spotify</center></div>
@@ -620,6 +611,11 @@
               <td>71</td>
               <td>FTCU - Nicki Minaj</td>
               <td>8.8/10</td>
+            </tr>
+            <tr>
+              <td>72</td>
+              <td>PIENSO EN TU MIRÁ - ROSALÍA</td>
+              <td>9.3/10</td>
             </tr>
           </table>
         </div>
