--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 73: Wood Cabin - Saint Etienne
+          Week 74: French Kiss - Mapache
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.6/10</h2>
+            <h2 id="rating">Overall Rating 9.0/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/2DvjHHtTjwlrMXyFKxPvXr?si=8e7d4d9517834887"
+                    href="https://open.spotify.com/track/3W0V6QTgLDnlDbH0SA8X2X?si=76196d0c598641a1"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=9pBaIK3EIjk"
+                    href="https://www.youtube.com/watch?v=nY9YWBZ2i4Y"
                     target="_blank"
                     ><center>
                       <img
@@ -141,19 +141,23 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The live band sounding production of this song is my main
-              attraction to this track. Listen to the beautful fills after the
-              choruses and the fun outro to really get a feel for the fluidity
-              of the simple percussion and chords.
+              The simplicity of the descending piano run at the beginning of
+              this song is so uplifting and familiar to me. I like that the same
+              piano runs throughout the song, yet gets more complex and varied
+              as it continues. Also a really big fan of this album cover, it
+              catches my eye every time I see it.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Saint Etienne is a newfound love of mine. They have a sizable
-              discography that I have been slowly trudging my way through. Their
-              1998 release "Good Humor" was my first find and continues to be my
-              favorite from what I've heard. This track is simply my current
-              favorite, but most of the songs on this release are of a similar
-              caliber. Give this one a listen, and make it a MERRY week!
+              I FINALLY got around to listening to the new Mapache album. Let me
+              not pretend like I am a long-time supporter of this band, this
+              album has just had glowing reviews from people at the radio
+              station where I preside. I heard this track played on that same
+              radio station a couple of weeks ago and decided that I had to give
+              it a listen. This track was surprisingly still my favorite, but
+              the entire album is really something special. It sounds like an
+              old folk rock favorite, but it's new! Give this one a listen and,
+              dare I say, make it a great new year!
             </p>
           </div>
         </div>
@@ -616,6 +620,11 @@
               <td>72</td>
               <td>PIENSO EN TU MIRÁ - ROSALÍA</td>
               <td>9.3/10</td>
+            </tr>
+            <tr>
+              <td>73</td>
+              <td>Wood Cabin - Saint Etienne</td>
+              <td>8.6/10</td>
             </tr>
           </table>
         </div>
