--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 74: French Kiss - Mapache
+          Week 75: Cuero Dudes - Buck Meek
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 9.0/10</h2>
+            <h2 id="rating">Overall Rating 8.6/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/3W0V6QTgLDnlDbH0SA8X2X?si=76196d0c598641a1"
+                    href="https://open.spotify.com/track/4z3zFBYGC4x4esUbnjqsva?si=9a5ce813f9a84c74"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=nY9YWBZ2i4Y"
+                    href="https://www.youtube.com/watch?v=DF-oEAIr7vs"
                     target="_blank"
                     ><center>
                       <img
@@ -141,23 +141,22 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The simplicity of the descending piano run at the beginning of
-              this song is so uplifting and familiar to me. I like that the same
-              piano runs throughout the song, yet gets more complex and varied
-              as it continues. Also a really big fan of this album cover, it
-              catches my eye every time I see it.
+              Ever since hearing my first taste of Buck Meek's solo work, his
+              voice has left me stunned. It's a fascination of mine that I still
+              haven't gotten over. Loving the way he says "Cuero Dudes" here.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              I FINALLY got around to listening to the new Mapache album. Let me
-              not pretend like I am a long-time supporter of this band, this
-              album has just had glowing reviews from people at the radio
-              station where I preside. I heard this track played on that same
-              radio station a couple of weeks ago and decided that I had to give
-              it a listen. This track was surprisingly still my favorite, but
-              the entire album is really something special. It sounds like an
-              old folk rock favorite, but it's new! Give this one a listen and,
-              dare I say, make it a great new year!
+              Buck Meek released two singles this week that seem to function as
+              a sort of deluxe album for his most recent album "Haunted
+              Mountain" (the album cover for these two songs are a black and
+              white version of the full LP). I cannot for the life of me figure
+              out how I've heard this song performed by him before, but I am
+              somehow already familiar with it regardless. It has been my
+              favorite Buck Meek song and when I listened to it this week I
+              could've swore it had already been released. Perhaps it's just a
+              connection of the soul or something. Give this one a listen and
+              make it a great week!
             </p>
           </div>
         </div>
@@ -625,6 +624,11 @@
               <td>73</td>
               <td>Wood Cabin - Saint Etienne</td>
               <td>8.6/10</td>
+            </tr>
+            <tr>
+              <td>74</td>
+              <td>French Kiss - Mapache</td>
+              <td>9.0/10</td>
             </tr>
           </table>
         </div>
