--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 75: Cuero Dudes - Buck Meek
+          Week 76: Lego Ring - Faye Webster
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.6/10</h2>
+            <h2 id="rating">Overall Rating 8.8/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/4z3zFBYGC4x4esUbnjqsva?si=9a5ce813f9a84c74"
+                    href="https://open.spotify.com/track/3bGMtDPWFXqPM7QecjVHlG?si=36f9f204468249dc"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=DF-oEAIr7vs"
+                    href="https://www.youtube.com/watch?v=QPSDjx8Do3s"
                     target="_blank"
                     ><center>
                       <img
@@ -141,21 +141,20 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              Ever since hearing my first taste of Buck Meek's solo work, his
-              voice has left me stunned. It's a fascination of mine that I still
-              haven't gotten over. Loving the way he says "Cuero Dudes" here.
+              Unexpected collab of the year for me, this is so much fun. For
+              such a simple, fun song, the two tempo changes add some intriguing
+              depth that would otherwise leave the song kind of flat and boring.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Buck Meek released two singles this week that seem to function as
-              a sort of deluxe album for his most recent album "Haunted
-              Mountain" (the album cover for these two songs are a black and
-              white version of the full LP). I cannot for the life of me figure
-              out how I've heard this song performed by him before, but I am
-              somehow already familiar with it regardless. It has been my
-              favorite Buck Meek song and when I listened to it this week I
-              could've swore it had already been released. Perhaps it's just a
-              connection of the soul or something. Give this one a listen and
+              Okay so randomly on Thursday of this week, I saw a couple tiktoks
+              of Faye Webster, Lil Yachty, and Tyler, the Creator all hanging
+              out together. Moments later, I got a notification that a new
+              single from Faye Webster was released. Sans Tyler, the Creator,
+              this track still sated my desire for a collaboration that I knew
+              was in the works based on the tiktoks I had seen earlier. It
+              doesn't take itself too seriously, but they both weren't afraid to
+              lay down some real vocals for this thing. Give it a listen and
               make it a great week!
             </p>
           </div>
@@ -629,6 +628,11 @@
               <td>74</td>
               <td>French Kiss - Mapache</td>
               <td>9.0/10</td>
+            </tr>
+            <tr>
+              <td>75</td>
+              <td>Cuero Dudes - Buck Meek</td>
+              <td>8.6/10</td>
             </tr>
           </table>
         </div>
