--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 76: Lego Ring - Faye Webster
+          Week 77: Dame Beso // Muevete - Kali Uchis
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.8/10</h2>
+            <h2 id="rating">Overall Rating 9.1/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/3bGMtDPWFXqPM7QecjVHlG?si=36f9f204468249dc"
+                    href="https://open.spotify.com/track/21RAJfkAbaq85RWJQWoxkx?si=fef5921ee802485c"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=QPSDjx8Do3s"
+                    href="https://www.youtube.com/watch?v=_h-Vcm7hqb4"
                     target="_blank"
                     ><center>
                       <img
@@ -141,21 +141,21 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              Unexpected collab of the year for me, this is so much fun. For
-              such a simple, fun song, the two tempo changes add some intriguing
-              depth that would otherwise leave the song kind of flat and boring.
+              I'm actually obsessed with the transition between the two halves
+              of this song. The tempo change and her vocalizations are so
+              inviting and exciting. I do indeed like the second half more than
+              the first but only by a little.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Okay so randomly on Thursday of this week, I saw a couple tiktoks
-              of Faye Webster, Lil Yachty, and Tyler, the Creator all hanging
-              out together. Moments later, I got a notification that a new
-              single from Faye Webster was released. Sans Tyler, the Creator,
-              this track still sated my desire for a collaboration that I knew
-              was in the works based on the tiktoks I had seen earlier. It
-              doesn't take itself too seriously, but they both weren't afraid to
-              lay down some real vocals for this thing. Give it a listen and
-              make it a great week!
+              This album was released last week and I listened to it right away,
+              but I have just recently approached the peak of my enjoyment with
+              it. This is her second Spanish album and I really think that it is
+              some of her best work. This song specifically has a beautiful
+              blend of her Colombian roots and a sort of Americanized pop sound
+              that she is so familiar with. I'm also just such a sucker for
+              these "two songs in one" type tracks. Enjoy this one and make it a
+              great week!
             </p>
           </div>
         </div>
@@ -633,6 +633,11 @@
               <td>75</td>
               <td>Cuero Dudes - Buck Meek</td>
               <td>8.6/10</td>
+            </tr>
+            <tr>
+              <td>76</td>
+              <td>Lego Ring - Faye Webster</td>
+              <td>8.8/10</td>
             </tr>
           </table>
         </div>
