--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 77: Dame Beso // Muevete - Kali Uchis
+          Week 78: Champagne Coast - Blood Orange
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 9.1/10</h2>
+            <h2 id="rating">Overall Rating 9.4/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/21RAJfkAbaq85RWJQWoxkx?si=fef5921ee802485c"
+                    href="https://open.spotify.com/track/0AIpGG5dxEgnAymhdJRSZ0?si=496940823617478b"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=_h-Vcm7hqb4"
+                    href="https://www.youtube.com/watch?v=nO6y1-erVEw"
                     target="_blank"
                     ><center>
                       <img
@@ -141,21 +141,22 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              I'm actually obsessed with the transition between the two halves
-              of this song. The tempo change and her vocalizations are so
-              inviting and exciting. I do indeed like the second half more than
-              the first but only by a little.
+              There are strange overlapping vocals during the chorus and in
+              other parts of the song that under other circumstances I would
+              feel overwhelmed and turned off by. For this song, however, they
+              are weaved together in a way that elevates the dreamy nature of
+              this song.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              This album was released last week and I listened to it right away,
-              but I have just recently approached the peak of my enjoyment with
-              it. This is her second Spanish album and I really think that it is
-              some of her best work. This song specifically has a beautiful
-              blend of her Colombian roots and a sort of Americanized pop sound
-              that she is so familiar with. I'm also just such a sucker for
-              these "two songs in one" type tracks. Enjoy this one and make it a
-              great week!
+              I've been a moderately big fan of blood orange for a while now,
+              but haven't explored his entire discography (still yet to complete
+              it, in fact). I've fequented his latest two releases "Angel's
+              Pulse" and "Negro Swan" for a few years now, but just recently
+              this track was suggested to me in some way or another. It's
+              definitely reminiscent of what I know and love of his new work,
+              but has this lulling effect that is new to me. Give this one a
+              listen and make it a great week!
             </p>
           </div>
         </div>
@@ -189,18 +190,18 @@
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Jack Garbe: Spring has Sprung - Skegss
+            Keena Garbe: Joy Of My Life - Chris Stapleton
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating 7.2/10</h2>
+              <h2 id="rating">Overall Rating 9.0/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/4MJZSCObbe4cmjdgYufNg1?si=230effa4339347f2"
+                    href="https://open.spotify.com/track/4EuaDcxHmHKS6gZ5iuGba0?si=386d58c7af694f3b"
                     target="_blank"
                     ><center>
                       <img
@@ -214,7 +215,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=4N535Fl93Vg"
+                    href="https://www.youtube.com/watch?v=jsE_zp_4vyo"
                     target="_blank"
                     ><center>
                       <img
@@ -231,11 +232,11 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            I love skegss and you will too! They are a bunch of cool Australian
-            fellas and they make groovy lil tunes. This song radiates good
-            vibrations into the universe and we can just absorb these and feel
-            good. Unfortunately we are entering the depths of winter in the US
-            but surely spring will spring again eventually.
+            Chris Stapleton has a voice that undeniably stands above his country
+            music counterparts. His music brings me back to the country music I
+            remember as a kid. Joy of my life is my current favorite, it is
+            beautiful! It reminds me to treasure each and everyday and
+            appreciate all the joys in my life❤️
           </p>
         </div>
         <div class="divider"><center>Songs of the Week Spotify</center></div>
@@ -638,6 +639,11 @@
               <td>76</td>
               <td>Lego Ring - Faye Webster</td>
               <td>8.8/10</td>
+            </tr>
+            <tr>
+              <td>77</td>
+              <td>Dame Beso // Muevete - Kali Uchis</td>
+              <td>9.1/10</td>
             </tr>
           </table>
         </div>
